force-app/main/default/objects/Offsite_Template_Investment_Company__c/Offsite_Template_Investment_Company__c.object-meta.xml
<CustomObject>
    <label>Offsite Template Investment Company</label>
    <nameField>
        <displayFormat>OT.Investment-{00000}</displayFormat>
        <label>Offsite Template Investment Company Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offsite Template Investment Companies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>