force-app/main/default/objects/Offsite_Template_Investment_Company__c/fields/CAPIQ_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>CAPIQ_Sub_Industry__c</fullName>
    <label>CAPIQ Sub Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>