force-app/main/default/objects/Offsite_Template_Investment_Company__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Investment_Company__r.Id , &quot;Detail&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail</label>
    <type>Text</type>
</CustomField>