force-app/main/default/objects/Offsite_Template_Investment_Company__c/fields/HL_Industry__c.field-meta.xml
<CustomField>
    <fullName>HL_Industry__c</fullName>
    <description>HL&apos;s industry break down</description>
    <label>HL Industry Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>