force-app/main/default/objects/Offsite_Template_Investment_Company__c/fields/Include__c.field-meta.xml
<CustomField>
    <fullName>Include__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include</label>
    <type>Checkbox</type>
</CustomField>