force-app/main/default/objects/Offsite_Template_Investment_Company__c/fields/Include_Formula__c.field-meta.xml
<CustomField>
    <fullName>Include_Formula__c</fullName>
    <formula>IF(Include__c,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include Formula</label>
    <type>Text</type>
</CustomField>