force-app/main/default/objects/Offsite_Template_Investment_Company__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>FROM CAPIQ</description>
    <label>CAPIQ Industry</label>
    <length>50</length>
    <type>Text</type>
</CustomField>