force-app/main/default/objects/Offsite_Template_Investment_Company__c/fields/Investment_Company__c.field-meta.xml
<CustomField>
    <fullName>Investment_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Company</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>Offsite Template Investment Companies</relationshipLabel>
    <relationshipName>Offsite_Template_Investment_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>