force-app/main/default/objects/Offsite_Template_Investment_Company__c/fields/Investment_Date__c.field-meta.xml
<CustomField>
    <fullName>Investment_Date__c</fullName>
    <label>Investment Date</label>
    <type>Date</type>
</CustomField>