force-app/main/default/objects/Offsite_Template_Investment_Company__c/fields/LTM_MM_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>LTM_MM_EBITDA__c</fullName>
    <label>LTM MM EBITDA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>