force-app/main/default/objects/Offsite_Template_Investment_Company__c/fields/Portfolio_Company__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Company__c</fullName>
    <formula>Investment_Company__r.Portfolio_CapIQ_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portfolio Company</label>
    <type>Text</type>
</CustomField>