force-app/main/default/objects/Offsite_Template_Investment_Company__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Potential Opportunity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>FVA</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>