force-app/main/default/objects/Offsite_Template_Investment_Company__c/fields/Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>Sort_Field__c</fullName>
    <description>Used for sorting the related list</description>
    <formula>Status__c + &apos; - &apos; + Portfolio_Company__c</formula>
    <label>Sort Field</label>
    <type>Text</type>
</CustomField>