force-app/main/default/objects/Offsite_Template_Investment_Company__c/recordTypes/Offsite_Template_Investment.recordType-meta.xml
<RecordType>
    <fullName>Offsite_Template_Investment</fullName>
    <active>true</active>
    <description>Offsite Template Investment</description>
    <label>Offsite Template Investment</label>
</RecordType>